<resources>
    <string name="app_name">wristband</string>
    <string name="title_activity_login_main">Sign in</string>
    <string name="main_tab_home">状态</string>
    <string name="main_tab_find">发现</string>
    <string name="main_tab_me">我的</string>
    <string name="sleep_tag_info">详细数据</string>
    <string name="sleep_tag_day">日视图</string>
    <string name="sleep_tag_week">周视图</string>
    <string name="sleep_tag_month">月视图</string>
    <string name="sleep_time">全天睡眠</string>
    <string name="deep_sleep">全天深睡</string>
    <string name="light_sleep">全天浅睡</string>
    <string name="yes_sleep">昨晚入睡</string>
    <string name="day_clear_sleep">今天醒来</string>
    <string name="clear_sleep">清醒时长</string>
    <string name="average_sleep_time">日均睡眠</string>
    <string name="average_deep_sleep">日均深睡</string>
    <string name="average_light_sleep">日均浅睡</string>
    <string name="average_yes_sleep">日均入睡</string>
    <string name="average_day_clear_sleep">日均醒来</string>
    <string name="average_clear_sleep">日均清醒</string>
    <string name="cancel">取消</string>
    <string name="ensure">確定</string>
    <string name="sport_step_selected">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020步</string>
    <string name="title_user_info">个人信息</string>
    <string name="title_electric">华卓手环</string>
</resources>
