<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.slogan.wristband.wristband.activity.MainActivity">

    <FrameLayout
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottom_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/transparent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E6E6E6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                >

                <TextView
                    android:id="@+id/home_tab_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/selector_main_home"
                    android:gravity="center"
                    android:text="@string/main_tab_home"
                    android:textColor="@color/home_tab_text_color"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/find_tab_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/selector_main_find"
                    android:gravity="center"
                    android:text="@string/main_tab_find"
                    android:textColor="@color/home_tab_text_color"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                >

                <TextView
                    android:id="@+id/me_tab_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:drawablePadding="2dp"
                    android:drawableTop="@drawable/selector_main_me"
                    android:gravity="center"
                    android:text="@string/main_tab_me"
                    android:textColor="@color/home_tab_text_color"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
