<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SleepQualityActivity">
    <include layout="@layout/include_title_bar"/>
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="243dp"
                android:background="#8863E2"
                >
                <LinearLayout
                    android:id="@+id/ll_detailed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="24dp">
                        <TextView
                            android:id="@+id/tv_sleep_time_top"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="晚上 11:06(睡)"
                            android:textColor="#FFFFFFFF"
                            android:textSize="10sp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            />
                        <TextView
                            android:id="@+id/tv_wake_time_top"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="晚上 11:06(睡)"
                            android:textColor="#FFFFFFFF"
                            android:textSize="10sp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="10dp"
                            />
                    </RelativeLayout>
                    <com.slogan.wristband.wristband.widght.SleepQualityView
                        android:id="@+id/sqv_sleep"
                        android:layout_width="match_parent"
                        android:layout_height="192dp">
                        
                    </com.slogan.wristband.wristband.widght.SleepQualityView>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_detailed_time"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"></android.support.v7.widget.RecyclerView>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/rl_undetailed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/sleep_quality_barchart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </com.github.mikephil.charting.charts.BarChart>
                </RelativeLayout>
            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_bg"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/png_compare_user"
                    />
                <TextView
                    android:id="@+id/tv_compare_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="你今天的睡眠指标打败46%的用户"
                    android:textColor="#FF4F4F4F"
                    android:textSize="14sp"
                    android:layout_marginLeft="8dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_bg"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_sleep_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/sleep_time"
                            android:text="全天睡眠"
                            android:textColor="@color/text_999"
                            android:textSize="10sp"
                            />
                        <com.slogan.wristband.wristband.widght.TimeView
                            android:id="@+id/time_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            >

                        </com.slogan.wristband.wristband.widght.TimeView>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_bg"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_deep_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/png_deep_sleep"
                            android:text="全天深睡"
                            android:textColor="@color/text_999"
                            android:textSize="10sp"
                            />
                        <com.slogan.wristband.wristband.widght.TimeView
                            android:id="@+id/time_deep_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            >

                        </com.slogan.wristband.wristband.widght.TimeView>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_bg"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_light_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/png_light_sleep"
                            android:text="全天浅睡"
                            android:textColor="@color/text_999"
                            android:textSize="10sp"
                            />
                        <com.slogan.wristband.wristband.widght.TimeView
                            android:id="@+id/time_light_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            >

                        </com.slogan.wristband.wristband.widght.TimeView>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_bg"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_yes_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/yes_sleep"
                            android:text="昨晚入睡"
                            android:textColor="@color/text_999"
                            android:textSize="10sp"
                            />
                        <com.slogan.wristband.wristband.widght.TimeView
                            android:id="@+id/time_yes_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            >

                        </com.slogan.wristband.wristband.widght.TimeView>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_bg"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_day_clear_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/day_clear_sleep"
                            android:text="今天醒来"
                            android:textColor="@color/text_999"
                            android:textSize="10sp"
                            />
                        <com.slogan.wristband.wristband.widght.TimeView
                            android:id="@+id/time_day_clear_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            >

                        </com.slogan.wristband.wristband.widght.TimeView>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_bg"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/tv_clear_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/png_clear_sleep"
                            android:text="清醒时长"
                            android:textColor="@color/text_999"
                            android:textSize="10sp"
                            />
                        <com.slogan.wristband.wristband.widght.TimeView
                            android:id="@+id/time_clear_sleep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            >

                        </com.slogan.wristband.wristband.widght.TimeView>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_bg"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:orientation="horizontal"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:background="#f8f8f8"
                >
                <TextView
                    android:id="@+id/tv_detailed_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/selector_sleep_tag_detailed_info"
                    android:text="@string/sleep_tag_info"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:drawablePadding="4dp"
                    />
                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/selector_sleep_tag_day"
                    android:text="@string/sleep_tag_day"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:drawablePadding="4dp"
                    />
                <TextView
                    android:id="@+id/tv_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/selector_sleep_tag_week"
                    android:text="@string/sleep_tag_week"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:drawablePadding="4dp"
                    />
                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/selector_sleep_tag_month"
                    android:text="@string/sleep_tag_month"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:drawablePadding="4dp"
                    />
            </LinearLayout>
        </LinearLayout>
    <!--</ScrollView>-->

</LinearLayout>